# Celestial

./: README.md  mflight.h
modules/: celestial.h  mflight.h
modules/common/: common.h  error.c  error.h  mixer.c  mixer.h  quaternion.c  quaternion.h  serialBuffer.c  serialBuffer.c~  serialBuffer.h  uartOutput.c  uartOutput.h  vector.c  vector.h  vector3d.h
modules/datalogging/: dataLogger.c  dataLogger.h
modules/feedback/: PIDBasic.c  PIDBasic.h
modules/feedback/angle/: angleModeBasic.c  angleModeBasic.h
modules/feedback/rate/: rateModeBasic.c  rateModeBasic.h
modules/filters/AHRS/: MadgwickFilter.c  MadgwickFilter.h
modules/filters/IMU/: complementaryFilter.c  complementaryFilter.h  kalmanFilter.c  kalmanFilter.h  kalmanFilterSingleAxis.c  kalmanFilterSingleAxis.h
modules/filters/lowpass/: lowpassFilter.c  lowpassFilter.h
modules/filters/recursive/: biquadLPF.c  biquadLPF.h  singlePoleLPF.c  singlePoleLPF.h
modules/model/regression/: linearRegression.c  linearRegression.h
modules/peripherals/: i2cDevice.h  ppmInput.h  pwmOutput.h  sdcard.h
modules/peripherals/fatfs/: ffconf.h
modules/sensors/: sensors.h
tests/: CMakeLists.txt  README.md
tests/cmocka-1.0.1/: ChangeLog
tests/cmocka-1.0.1/example/: calculator_test.c
tests/cmocka-1.0.1/src/: cmocka.c
tests/common/: serialBufferTest.c
tests/manual/filters/: biquadLPFTest.c  data.txt  singlePoleLPFTest.c
tests/unit/: angleModeBasicTest.c  errorTest.c  motorMixerTest.c  pidBasicTest.c  serialBufferTest.c  unittests.c
tools/imu/: CMakeLists.txt  ImuData0.csv  imuInputOutput.c
(+22 files in other folders)
